--- a/design/base.html
+++ b/design/base.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title>Django E-Commerce</title>
+	<title style="color: red" >Django E-Commerce</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	
